--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <li><a>Contact</a></li>
               </ul>
             </div>
-            <a class="font-bold text-xl">Biker Zone</a>
+            <a class="font-bold text-xl ">Biker Zone</a>
           </div>
           <div class="navbar-center hidden lg:flex">
             <ul class="menu menu-horizontal px-1">
@@ -78,7 +78,7 @@
             </ul>
           </div>
           <div class="">
-            <a class="btn bg-bike-primary text-white">Login</a>
+            <a class="btn bg-orange-600 text-white">Login</a>
           </div>
         </div>
       </nav>
@@ -98,7 +98,7 @@
                 Amet minim mollit non deserunt ullamco est sit aliqua dolor do
                 amet sint. Velit officia consequat duis enim velit mollit.
               </p>
-              <button class="btn bg-bike-primary text-white">Purchase</button>
+              <button class="btn bg-orange-600  text-white">Purchase</button>
             </div>
             <!-- image content -->
             <div class="flex-1">
@@ -125,7 +125,7 @@
                 Amet minim mollit non deserunt ullamco est sit aliqua dolor do
                 amet sint. Velit officia consequat duis enim velit mollit.
               </p>
-              <button class="btn bg-bike-primary text-white">Purchase</button>
+              <button class="btn bg-orange-600  text-white">Purchase</button>
             </div>
             <!-- image content -->
             <div class="flex-1">
@@ -152,7 +152,7 @@
                 Amet minim mollit non deserunt ullamco est sit aliqua dolor do
                 amet sint. Velit officia consequat duis enim velit mollit.
               </p>
-              <button class="btn bg-bike-primary text-white">Purchase</button>
+              <button class="btn bg-orange-600 text-white">Purchase</button>
             </div>
             <!-- image content -->
             <div class="flex-1">
@@ -191,7 +191,7 @@
                 fermentum amet faucibus sed id nisi lectus at.
               </p>
               <div class="card-actions">
-                <button class="btn bg-bike-primary text-white">
+                <button class="btn bg-orange-600  text-white">
                   Read More
                 </button>
               </div>
@@ -209,7 +209,7 @@
                 fermentum amet faucibus sed id nisi lectus at.
               </p>
               <div class="card-actions">
-                <button class="btn bg-bike-primary text-white">
+                <button class="btn bg-orange-600  text-white">
                   Read More
                 </button>
               </div>
@@ -227,7 +227,7 @@
                 fermentum amet faucibus sed id nisi lectus at.
               </p>
               <div class="card-actions">
-                <button class="btn bg-bike-primary text-white">
+                <button class="btn bg-orange-600  text-white">
                   Read More
                 </button>
               </div>
@@ -321,7 +321,7 @@
     </main>
 
     <!-- Footer Section -->
-    <footer class="footer bg-black text-neutral-content p-10">
+    <footer class="footer lg:flex bg-black text-neutral-content p-10">
       <aside>
         <p>
           ACME Industries Ltd.
@@ -329,7 +329,7 @@
           Providing reliable tech since 1992
         </p>
       </aside>
-      <nav>
+      <nav class="lg:ml-130">
         <h6 class="footer-title">Get The App</h6>
         <div class="grid grid-cols-1 gap-4">
           <a><img class="w-36" src="./images/others/android.png" alt="" /></a>
